--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Etsy API Configuration
 # Get your API key from https://www.etsy.com/developers/
-ETSY_API_KEY=***REMOVED***
+ETSY_API_KEY=your_api_key_here
 
 # Optional: Etsy OAuth (for authenticated requests)
-ETSY_SHARED_SECRET=***REMOVED***
+ETSY_SHARED_SECRET=your_shared_secret_here
